Prepare files structure

--- a/src/de/index.html
+++ b/src/de/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="de">
 	<head>
     <meta charset="UTF-8"/>
-    <title>3LP Centrum Logistyczne</title>
-    <meta name="description" content="Potężne powierzchnie magazynowe oraz w pełni zautomatyzowana logistyka na terenie Polski i Europy z wykorzystaniem współpracujących firm kurierskich.">
-    <meta name="keywords" content="">
+    <title>3LP Logistikzentrum</title>
+    <meta name="description" content="Riesige Lagerflächen und voll automatisierte Logistik in Polen und in Europa, unter Nutzung von zusammenarbeitenden Kurierdiensten.">
+    <meta name="keywords" content=""> /////////////
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="icon" type="images/png" href="images/icon.png">
+    <link rel="icon" type="images/png" href="images/icon.png"> /////////////
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="css/style.css">
