Add white navbar

--- a/src/pl/index.html
+++ b/src/pl/index.html
@@ -7,22 +7,77 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="icon" type="images/png" href="images/icon.png">
+    <link rel="icon" type="images/png" href="../images/icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
   </head>
   <body>
-    <header class="header_area">
+    <header class="header_area whiteMenu">
+      <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+        <a class="navbar-brand" href="index.html"><img src="../images/logo.png" alt="3lp logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">O nas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Usługi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Klienci</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Kontakt</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                PL
+              </a>
+              <ul class="dropdown-menu">
+                <li class="nav-item"><a class="nav-link" href="index.html">ENG</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">DE</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <section class="banner-area">
+      <div class="filled-background"></div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../images/1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../images/2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../images/3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../images/4.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="banner-area">
+      <img src="">
+      <P style="margin-top: 400px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem minima laborum, veritatis sunt architecto magnam dolorem inventore fuga ipsam et. Tenetur laborum doloremque ullam consectetur voluptates placeat quidem perferendis, voluptatibus accusamus sint dolorem soluta consequuntur illum! Nesciunt non similique reiciendis ad architecto blanditiis cum natus id aliquid delectus. Suscipit provident quam quidem, quod velit odit pariatur voluptas sequi placeat impedit eum iste qui. Sapiente, ducimus cum doloribus ipsum quo illum tempore quia, autem commodi asperiores pariatur, amet corporis est consectetur iste! Voluptates esse reiciendis, quod quam quas cumque quos numquam est molestiae veniam debitis consectetur explicabo et veritatis. Sunt, optio. Architecto magnam provident voluptate numquam dolorum iure labore pariatur? Deserunt, facere natus velit iure quae excepturi inventore repudiandae dicta in laboriosam ab obcaecati animi voluptate voluptas facilis unde voluptatem accusantium sequi, repellendus voluptatibus deleniti non odit! Itaque quia blanditiis quam. Fuga dolorum ducimus obcaecati ad? Illo hic atque sint ut deserunt, minus doloremque officia doloribus ducimus omnis harum eaque numquam voluptas minima soluta rem, voluptatem temporibus facilis! Alias adipisci culpa dicta dolorum repellat tempora veritatis ea ipsum, non qui saepe labore rerum dolores eveniet rem odit iure nulla voluptatum nobis minima. Minima, ipsa! Nesciunt dolor qui nam sapiente, minus, accusantium expedita illo architecto a amet rerum veniam est, dolorum adipisci commodi praesentium enim nemo earum harum. Magni incidunt consequatur in iusto blanditiis fugiat voluptatum doloribus! Veniam asperiores nihil, quisquam harum enim molestiae vero magni quas nesciunt maiores quos voluptates molestias voluptatem adipisci quibusdam neque repellendus ut excepturi repudiandae laborum velit magnam? Provident, quam id nihil, nisi perferendis libero expedita ex distinctio eaque doloremque quas neque magnam consequuntur harum, quasi porro consequatur saepe dolores deleniti at sed asperiores aut! Ratione libero, saepe quas cum iste nisi reiciendis a ut eos non perspiciatis, dolor animi nam quos aperiam eveniet, in debitis? Maiores vero voluptatem eum? Quas mollitia quibusdam suscipit sed laudantium sequi rerum aut, ducimus rem nemo adipisci magni voluptatum excepturi quaerat laboriosam aliquid? Nihil minima praesentium totam alias blanditiis eaque aliquam sit laborum perferendis nobis vel fuga, qui quas error impedit quia distinctio aut dolore, dignissimos tenetur? Omnis, aliquid culpa! Placeat, doloremque reprehenderit. Labore assumenda corrupti ratione voluptate quidem quam cumque repudiandae maiores commodi placeat libero doloremque optio dolorem velit quae aperiam quas eaque, voluptates provident dolorum repellendus temporibus. Facere nobis, sunt vitae delectus minima dignissimos provident distinctio rem at fuga perspiciatis quisquam laborum nostrum ipsum ullam itaque labore voluptatem voluptates odio sequi voluptatibus, exercitationem quaerat repudiandae. Praesentium ullam atque in quam rerum. Velit delectus culpa placeat eligendi voluptate similique quas quos quidem distinctio, ab fuga perspiciatis, cupiditate ducimus. Corporis dolorum eligendi molestiae hic impedit laudantium? Numquam eius assumenda alias saepe laudantium optio harum adipisci ipsum mollitia error magnam quis iure, pariatur enim hic commodi provident inventore architecto iste nulla aut unde repellendus temporibus consequuntur! Ipsam ad officiis doloribus omnis in atque culpa non, laudantium, nam modi voluptate molestias aspernatur ut esse unde recusandae saepe reprehenderit commodi. Dolorum quisquam quod pariatur vero, dolor adipisci minus vel deserunt, cupiditate obcaecati fuga ducimus voluptatibus fugiat, nobis nostrum architecto ea quidem incidunt error sint. Molestiae at magni aspernatur, omnis dolorem officia dolorum inventore ipsa, laudantium eum reiciendis necessitatibus dolore fuga soluta? Necessitatibus aperiam praesentium soluta dolore libero beatae blanditiis cupiditate aut eaque assumenda nulla est similique a officiis consequuntur placeat animi, illo facilis distinctio ipsam nisi error adipisci sit expedita. Error odit quae ipsam perspiciatis nostrum quidem tempora impedit. Cum sunt nemo perferendis accusamus labore dicta? Voluptatem, culpa labore reprehenderit, odio maiores nam aliquam ipsam quos voluptatibus a non dolorum molestiae aperiam illum ullam excepturi dolor unde minus quo earum illo tempore? Nulla unde officiis at debitis eligendi, tenetur libero. Nihil, eos. Exercitationem labore optio reiciendis! Quis laudantium aliquam vitae suscipit reprehenderit quod minus quae reiciendis cupiditate, magnam dicta, perspiciatis blanditiis sunt tenetur sed accusantium est. Voluptates architecto hic distinctio, tempora sit dolorum illo eaque itaque a. Ea accusamus, dolorum, sint quod magni iste culpa qui similique odio reiciendis sequi ipsam odit fugit voluptate vitae optio. Excepturi expedita illo aspernatur accusamus quae quis quo quia dolorem eius ea, odio aliquam laborum laboriosam molestiae nostrum, sint architecto dolor est, sed id delectus minus debitis neque. Quam assumenda repellendus, labore deserunt minima dolorum, libero ducimus error ipsum vel nostrum, voluptatibus deleniti dolores expedita? Quos quidem cum minima voluptatibus accusamus ipsum, maxime accusantium recusandae quibusdam ratione et reiciendis voluptatem sed eum consectetur, voluptas porro tempore sapiente esse nemo quod incidunt aliquid? Mollitia fugit ducimus nemo, esse quis odit sed iure accusantium adipisci, quasi doloremque est exercitationem? Velit molestias, suscipit sunt officia libero voluptates ex ullam voluptatem incidunt odit assumenda aperiam ratione reiciendis deleniti corporis in animi placeat labore! Repellendus autem rem omnis mollitia amet impedit magni itaque officia obcaecati commodi consectetur quisquam esse, assumenda consequatur quis earum, id atque! Odio alias officia nam ipsam eaque quibusdam, ratione quisquam laborum iste voluptatum. Reiciendis corrupti quo mollitia doloribus et hic, cupiditate, animi autem sit natus, maxime voluptate placeat. Aperiam alias deleniti obcaecati minima architecto sint. Quisquam hic similique aspernatur rerum, maiores odio reprehenderit ipsam nam earum. Incidunt recusandae rem, dolorem repellat est, facilis consequatur consequuntur at ex provident officia nam ea? Expedita a soluta eveniet perspiciatis nihil voluptatum distinctio dolorem, assumenda iure iste repudiandae rerum ut, itaque quasi cumque sequi iusto praesentium. Molestiae repellendus dicta, ipsam aliquam reprehenderit velit sed deserunt, praesentium soluta beatae nihil quae neque at! Rem omnis ad facilis aliquam quasi! Suscipit cumque laboriosam eveniet ullam neque ipsam aut. Sint laudantium reprehenderit asperiores repellat veniam eos fugiat quia, nam dolore, odit modi ducimus explicabo eligendi molestias nesciunt maiores ullam in? Adipisci illum, harum beatae obcaecati distinctio veniam illo accusamus praesentium nesciunt tenetur ex et ipsam error modi iste numquam! Corporis inventore at exercitationem aliquam fugit rem, aut quia nobis. Rerum dolor corporis accusantium, aliquam cupiditate iste modi magnam. Quisquam, facilis voluptatem atque ipsam et assumenda eum! Quasi nemo vitae, itaque odio inventore nesciunt omnis optio obcaecati quas quo nisi quia perspiciatis ullam, perferendis officiis. Voluptatem velit, ipsa, repellendus nihil maiores, temporibus expedita ullam perferendis libero consequatur at possimus necessitatibus voluptatum perspiciatis delectus? Voluptatibus distinctio quia soluta minima veniam quaerat ipsam, sit expedita! Aspernatur, voluptatibus inventore voluptas eveniet consectetur totam alias ea non corrupti fuga odio aliquid consequuntur sint, exercitationem, recusandae eligendi impedit! Esse, repellat dolores! Exercitationem recusandae, velit voluptates veritatis nostrum porro expedita laborum laudantium officia a sunt nemo repellendus corrupti vero cupiditate perspiciatis, numquam aliquid omnis alias. Accusamus, doloribus? Vel aut neque eligendi rem facilis voluptatibus sunt, suscipit quia ea ab consequuntur optio sapiente, officiis magni voluptates assumenda nostrum dignissimos sequi similique non necessitatibus. Ad, laboriosam doloremque perspiciatis itaque officia atque quibusdam ullam labore culpa dicta excepturi, corporis provident ducimus laborum fuga, earum accusamus vitae ut accusantium voluptatum saepe quo sint quia. Aliquam doloribus veritatis cum natus velit non placeat numquam, quae laudantium. Rerum, dolores, dignissimos ratione architecto praesentium quia minima tempore fugit excepturi optio hic quisquam vel deserunt provident odit. Quis, animi? Aspernatur error facilis incidunt eaque enim dignissimos earum dolores deserunt? Laboriosam ex eaque laudantium nemo, quod a corporis minima animi autem, praesentium veritatis, expedita aliquid. Adipisci nam aut placeat molestias illo libero, voluptatum sed reprehenderit porro rem corporis exercitationem iusto ipsam sunt est architecto laboriosam itaque debitis, mollitia harum, corrupti expedita! Illum animi nostrum quidem eos, officia esse repellat a odio accusamus ipsam debitis cumque hic laborum, laudantium aliquid! Recusandae reprehenderit eos, enim optio voluptas porro. Nulla rerum necessitatibus ullam nemo, voluptates aliquam soluta repudiandae animi vero ea distinctio. Sunt dolore modi labore beatae. Odit eius quos in tempora minus ut? Explicabo porro eaque quos doloribus saepe tempora magni labore soluta a libero, enim distinctio numquam ad ipsa molestiae dolorum ullam velit excepturi dignissimos quasi error! Quidem ad veritatis velit maxime veniam, recusandae quae libero impedit magni corporis, consequuntur quas incidunt earum rerum. Reprehenderit tenetur consequatur in hic nisi beatae quam iusto temporibus voluptatem molestias inventore voluptates tempore a culpa quos sapiente, eum quis nesciunt similique amet nulla provident. Quasi inventore quae ipsum reprehenderit recusandae, eveniet voluptatibus, earum officiis distinctio accusantium magni, nam explicabo mollitia rerum! Eligendi explicabo ad commodi! Et quidem saepe ipsum, hic voluptatem voluptates illo repellendus, eligendi, labore repudiandae iste cum quos nisi laborum? Ex est pariatur, fuga ab odio dicta commodi accusamus dolores assumenda voluptates totam fugiat, ad tempora esse. Maxime ipsum suscipit aliquid, aliquam consequuntur rerum similique omnis illo. Unde iusto perspiciatis a odio soluta sed, ipsum commodi praesentium nam maiores velit atque dolorum! Eum quos doloremque odit quam, neque qui iusto excepturi non! Cupiditate ab, quo voluptate qui numquam fugit ea est ut iusto placeat impedit voluptatum quam modi et vel reiciendis doloribus architecto tenetur, reprehenderit voluptatem. Architecto eligendi magnam dolore nesciunt delectus sunt cumque assumenda veniam illum! Iusto facere rem veritatis? Aliquid ipsa iusto vero error, corrupti illo voluptas autem adipisci! Laudantium eius adipisci consequatur maiores quibusdam minima corporis tempora sequi, consequuntur cumque commodi voluptatem aliquid deserunt distinctio ex ipsa voluptate esse, perferendis itaque dignissimos explicabo corrupti repudiandae? Accusantium delectus enim laudantium harum, error maiores tempore distinctio veniam ratione! Dolorem laborum praesentium tempore sunt consequatur!</P>
     </section>
     <footer class="footer-area">
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
