--- a/src/pl/index.html
+++ b/src/pl/index.html
@@ -51,20 +51,42 @@
       </nav>
     </header>
     <section class="banner-area">
-      <div class="filled-background"></div>
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="filled-background"></div>
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../images/1.jpg" class="d-block w-100" alt="...">
+            <img src="../images/1.jpg" class="d-block h-100" alt="...">
+            <div class="carousel-caption d-block d-md-block">
+              <h1>Magazynowanie bez tajemnic</h1>
+              <p>Oferujemy składowanie na regałach paletowych, półkowych oraz placu zewnętrznym.</p>
+            </div>
           </div>
           <div class="carousel-item">
-            <img src="../images/2.jpg" class="d-block w-100" alt="...">
+            <img src="../images/2.jpg" class="d-block h-100" alt="...">
+            <div class="carousel-caption d-block d-md-block">
+              <h1>Logistyka dla Ciebie</h1>
+              <p>Zapewniamy kompleksową pomoc z zakresu dystrybucji, zoptymalizowanego magazynowania i transportu 24h. </p>
+            </div>
           </div>
           <div class="carousel-item">
-            <img src="../images/3.jpg" class="d-block w-100" alt="...">
+            <img src="../images/3.jpg" class="d-block h-100" alt="...">
+            <div class="carousel-caption d-block d-md-block">
+              <h1>Napędzamy e-biznes</h1>
+              <p>Cenimy Twój czas, dlatego realizujemy dostawy z naszego centrum magazynowego w trybie ekspresowym. </p>
+            </div>
           </div>
           <div class="carousel-item">
-            <img src="../images/4.jpg" class="d-block w-100" alt="...">
+            <img src="../images/4.jpg" class="d-block h-100" alt="...">
+            <div class="carousel-caption d-block d-md-block">
+              <h1>Napędzamy e-commerce</h1>
+              <p>Potężne powierzchnie magazynowe oraz w pełni zautomatyzowana logistyka na terenie Polski i Europy z wykorzystaniem współpracujących firm kurierskich. </p>
+            </div>
           </div>
         </div>
       </div>
