--- a/src/pl/index.html
+++ b/src/pl/index.html
@@ -145,6 +145,51 @@
       </div>
     </section>
     <footer class="footer-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <div class="single-footer-widget">
+              <img class="footer-logo" src="../images/logo-white.png" alt="3lp logo">
+              <div class="row footer-social">
+                <a href="https://www.linkedin.com/company/3lp-s.a/" target="_blank" class="icon-button linkedin"><i class="fab fa-linkedin-in"></i><span></span></a>
+                <a href="https://www.facebook.com/3LPSA/" target="_blank" class="icon-button facebook"><i class="fab fa-facebook-f"></i><span></span></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="single-footer-widget">
+              <h6>NAWIGACJA</h6>
+              <ul>
+                <li><a href="">O nas</a></li>
+                <li><a href="">Usługi</a></li>
+                <li><a href="">Klienci</a></li>
+                <li><a href="">Kontakt</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="single-footer-widget">
+              <h6>KONTAKT</h6>
+              <ul>
+                <li>Sekretariat:</li>
+                <li><span><i class="fas fa-phone"></i></span><a href="+48717328618">+48 71 732 86 18</a></li>
+                <li><span><i class="far fa-envelope"></i></span><a href="mailto:kontakt@3lp.eu">kontakt@3lp.eu</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="single-footer-widget footer-address">
+              <h6>Adres</h6>
+              <p><span>3LP S.A.</span></p>
+              <p>ul. Kwiatkowskiego 24</p>
+              <p>55-011 Siechnice</p>
+              <p>woj. dolnośląskie</p>
+              <p>Polska</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 text-center"><p>Copyright © 2020 3LP S.A. . All rights reserved.</p></div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
