Add numbers area

--- a/src/pl/index.html
+++ b/src/pl/index.html
@@ -92,21 +92,26 @@
     <section class="numbers-area">
       <div class="container">
         <div class="numbers-title">
-          <h2>3LP w liczbach</h2>
+          <h2>3LP w liczbach:</h2>
         </div>
-        <div class="row justify-content-start">
-          <div class="col-6 align-self-start">
-            <span class="count1" data-from="10" data-to="65000" data-time="1000">0</span> m2 powierzchni magazynowej
+        <div class="row">
+          <div class="col-6">
+            <span class="numbers-headers"><span class="count1" data-from="10" data-to="65000" data-time="1000">0</span> m2</span>
+            <P>powierzchni magazynowej</P>
+          </div>
+          <div class="col-6">
+            <span class="numbers-headers"><span class="count2" data-from="10" data-to="35000" data-time="1000">0</span></span>
+            <P>lokacji na zautomatyzowanej antresoli</P>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-6 align-self-center">
-            <span class="count2" data-from="10" data-to="35000" data-time="1000">0</span> lokacji na zautomatyzowanej antresoli
+        <div class="row">
+          <div class="col-6">
+            <span class="numbers-headers"><span class="count3" data-from="10" data-to="90000" data-time="1000">0</span></span>
+            <P>lokacji szaf Lean Lift</P>
           </div>
-        </div>
-        <div class="row justify-content-end">
-          <div class="col-6 align-self-end">
-            <span class="count3" data-from="10" data-to="90000" data-time="1000">0</span> lokacji szaf Lean Lift
+          <div class="col-6">
+            <span class="numbers-headers">Ponad <span class="count4" data-from="10" data-to="300000" data-time="1000">0</span></span>
+            <P>wysyłek miesięcznie w trybie 24h</P>
           </div>
         </div>
       </div>
@@ -188,7 +193,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 text-center"><p>Copyright © 2020 3LP S.A. . All rights reserved.</p></div>
+        <div class="col-12 text-center copy-text"><p>Copyright © 2020 3LP S.A. . All rights reserved.</p></div>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
