--- a/src/pl/index.html
+++ b/src/pl/index.html
@@ -51,7 +51,7 @@
       </nav>
     </header>
     <section class="banner-area">
-      <div>
+      <div class="slide-right">
         <svg class="intro" viewbox="0 0 200 100">
           <text text-anchor="start" x="10" y="30" class="text text-stroke" clip-path="url(#text1)">Logistyka</text>
           <text text-anchor="start" x="10" y="60" class="text text-stroke" clip-path="url(#text2)">Dla</text>
