--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 	<head>
     <meta charset="UTF-8"/>
-    <title>3LP Centrum Logistyczne</title>
+    <title>AUTO KOMPLEX Warsztat Samochodowy</title>
     <meta name="description" content="Potężne powierzchnie magazynowe oraz w pełni zautomatyzowana logistyka na terenie Polski i Europy z wykorzystaniem współpracujących firm kurierskich.">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,15 +10,183 @@
     <link rel="icon" type="images/png" href="images/icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-    <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
-    <header class="header_area">
+    <header class="header_area whiteMenu" id="navbar">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="3lp logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">O nas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Usługi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Galeria</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Kontakt</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <section class="banner-area">
+      <div class="slide-right">
+        <svg class="intro" viewbox="0 0 200 100">
+          <text text-anchor="start" x="10" y="30" class="text text-stroke" clip-path="url(#text1)">Warsztat</text>
+          <text text-anchor="start" x="10" y="60" class="text text-stroke" clip-path="url(#text2)">Dla</text>
+          <text text-anchor="start" x="10" y="90" class="text text-stroke" clip-path="url(#text3)">Ciebie</text>
+          <text text-anchor="start" x="10" y="30" class="text text-stroke text-stroke-2" clip-path="url(#text1)">Warsztat</text>
+          <text text-anchor="start" x="10" y="60" class="text text-stroke text-stroke-2" clip-path="url(#text2)">Dla</text>
+          <text text-anchor="start" x="10" y="90" class="text text-stroke text-stroke-2" clip-path="url(#text3)">Ciebie</text>
+          <defs>
+            <clipPath id="text1">
+              <text text-anchor="start" x="10" y="30" class="text">Warsztat</text>
+            </clipPath>
+            <clipPath id="text2">
+              <text text-anchor="start" x="10" y="60" class="text">Dla</text>
+            </clipPath>
+            <clipPath id="text3">
+              <text text-anchor="start" x="10" y="90" class="text">Ciebie</text>
+            </clipPath>
+          </defs>
+        </svg>
+      </div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide justify-content-end" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/1.jpg" class="d-block h-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/2.jpg" class="d-block h-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/3.jpg" class="d-block h-100" alt="...">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="featureArea">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-4">
+            <div class="feature__text">
+              <div class="section-title">
+                <span>Why choose us ?</span>
+                <h2>Our feature</h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua viverra maecenas facilisis. </p>
+              <a href="#" class="primary-btn second-bg">See Courses</a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-md-8">
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="feature__item">
+                  <img src="img/feature/feature-1.png" alt="">
+                  <h5>Unlimited Car Support</h5>
+                </div>
+                <div class="feature__item">
+                  <img src="img/feature/feature-2.png" alt="">
+                  <h5>Driving School Insures</h5>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="feature__item right-column">
+                  <img src="img/feature/feature-3.png" alt="">
+                  <h5>Any Time Any Location</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="cards-area">
+      <div class="container card-container">
+        <div class="row">
+          <div class="card left-card col-12">
+            <img class="card-img-top left-card-img" src="../images/why.JPG">
+            <div class="card-body">
+              <div class="wrapper">
+                <h3 class="card-title">Kompleksowa obsługa logistyczna</h3>
+                <p class="card-text">Potężne powierzchnie magazynowe oraz w pełni zautomatyzowana logistyka na terenie Polski i Europy z wykorzystaniem współpracujących firm kurierskich.</p>
+              </div>
+            </div>
+          </div>
+          <div class="card right-card col-12">
+            <img class="card-img-top right-card-img" src="../images/why.JPG">
+            <div class="card-body right-card-body">
+              <div class="wrapper">
+                <h3 class="card-title">Obsługa e-commerce</h3>
+                <p class="card-text">Cenimy Twój czas, dlatego realizujemy dostawy z naszego centrum magazynowego w trybie ekspresowym.</p>
+              </div>
+            </div>
+          </div>
+          <div class="card left-card col-12">
+            <img class="card-img-top left-card-img" src="../images/why.JPG">
+            <div class="card-body">
+              <div class="wrapper">
+                <h3 class="card-title">Sortowanie i obsługa zwrotów </h3>
+                <p class="card-text">Zoptymalizowane procesy logistyczne, zaawansowane i zróżnicowane wyposażenie gwarantują realizację usług sortowania na najwyższym poziomie.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <footer class="footer-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <div class="single-footer-widget">
+              <img class="footer-logo" src="images/logo-white.png" alt="auto-komplex logo">
+            </div>
+          </div>
+          <div class="col-2">
+            <div class="single-footer-widget">
+              <h6>NAWIGACJA</h6>
+              <ul>
+                <li><a href="">O nas</a></li>
+                <li><a href="">Usługi</a></li>
+                <li><a href="">Klienci</a></li>
+                <li><a href="">Kontakt</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="single-footer-widget">
+              <h6>KONTAKT</h6>
+              <ul>
+                <li><span><i class="fas fa-phone"></i></span><a href="+48503519572">+48 503 519 572</a></li>
+                <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="single-footer-widget footer-address">
+              <h6>Adres</h6>
+              <p><span>AUTO KOMPLEX</span></p>
+              <p>ul. Gałczyńskiego 14</p>
+              <p>52-214 Wrocław</p>
+              <p>woj. dolnośląskie</p>
+              <p>Polska</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 text-center copy-text"><p>Copyright © 2020 AUTO KOMPLEX. All rights reserved.</p></div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
