Add contact form & mail.php

--- a/src/contact.html
+++ b/src/contact.html
@@ -76,76 +76,60 @@
         </div>
       </div>
     </section>
-    <section class="featureArea">
+    <section class="contactArea">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-4">
-            <div class="feature__text">
-              <div class="section-title">
-                <span>Why choose us ?</span>
-                <h2>Our feature</h2>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua viverra maecenas facilisis. </p>
-              <a href="#" class="primary-btn second-bg">See Courses</a>
+            <div class="contact__address">
+              <h4>Contact info</h4>
+              <ul>
+                <li>
+                  <div class="icon">
+                    <i class="fa fa-phone"></i>
+                  </div>
+                  <p><span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></span><span><a href="+48503519572">+48 503 519 572</a></span></p>
+                </li>
+                <li>
+                  <div class="icon">
+                    <i class="fa fa-map-marker-alt"></i>
+                  </div>
+                  <p>ul. Gałczyńskiego 14,<br>52-214 Wrocław</p>
+                </li>
+                <li>
+                  <div class="icon">
+                    <i class="fa fa-clock"></i>
+                  </div>
+                  <p><span>Pon - Sob : 8:00 - 17:00</span><span>Niedziela: Zamknięte</span></p>
+                </li>
+              </ul>
             </div>
           </div>
           <div class="col-lg-8 col-md-8">
-            <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="feature__item">
-                  <img src="img/feature/feature-1.png" alt="">
-                  <h5>Unlimited Car Support</h5>
+            <div class="contact__form">
+              <h4>Leave a message</h4>
+              <form method="post" name="contactform" action="mail.php">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <input type="text" name="name" id="name" placeholder="Imię" required>
+                  </div>
+                  <div class="col-lg-6">
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                  </div>
                 </div>
-                <div class="feature__item">
-                  <img src="img/feature/feature-2.png" alt="">
-                  <h5>Driving School Insures</h5>
-                </div>
-              </div>
-              <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="feature__item right-column">
-                  <img src="img/feature/feature-3.png" alt="">
-                  <h5>Any Time Any Location</h5>
-                </div>
-              </div>
+                <textarea name="message" id="message" placeholder="Wiadomość" required></textarea>
+                <button type="submit" class="site-btn">Find an agent</button>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="cards-area">
-      <div class="container card-container">
-        <div class="row">
-          <div class="card left-card col-12">
-            <img class="card-img-top left-card-img" src="../images/why.JPG">
-            <div class="card-body">
-              <div class="wrapper">
-                <h3 class="card-title">Kompleksowa obsługa logistyczna</h3>
-                <p class="card-text">Potężne powierzchnie magazynowe oraz w pełni zautomatyzowana logistyka na terenie Polski i Europy z wykorzystaniem współpracujących firm kurierskich.</p>
-              </div>
-            </div>
-          </div>
-          <div class="card right-card col-12">
-            <img class="card-img-top right-card-img" src="../images/why.JPG">
-            <div class="card-body right-card-body">
-              <div class="wrapper">
-                <h3 class="card-title">Obsługa e-commerce</h3>
-                <p class="card-text">Cenimy Twój czas, dlatego realizujemy dostawy z naszego centrum magazynowego w trybie ekspresowym.</p>
-              </div>
-            </div>
-          </div>
-          <div class="card left-card col-12">
-            <img class="card-img-top left-card-img" src="../images/why.JPG">
-            <div class="card-body">
-              <div class="wrapper">
-                <h3 class="card-title">Sortowanie i obsługa zwrotów </h3>
-                <p class="card-text">Zoptymalizowane procesy logistyczne, zaawansowane i zróżnicowane wyposażenie gwarantują realizację usług sortowania na najwyższym poziomie.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16869.789137902328!2d17.01919340836122!3d51.05845787678744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2e957d4920722a0c!2sAUTO%20KOMPLEX%20Gliwi%C5%84ski%20Jaros%C5%82aw!5e0!3m2!1spl!2spl!4v1595325378799!5m2!1spl!2spl"
+        height="400" style="border:0;" allowfullscreen="">
+      </iframe>
+    </div>
     <footer class="footer-area">
       <div class="container">
         <div class="row">
