--- a/src/about.html
+++ b/src/about.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="about.html">O nas</a>
+              <a class="nav-link acive-nav-link" href="about.html">O nas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Usługi</a>
@@ -76,13 +76,13 @@
         </div>
       </div>
     </section>
-    <section class="ftco-section ftco-about">
+    <section class="aboutArea">
       <div class="container">
         <div class="row no-gutters">
           <div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/front.png); background-repeat: no-repeat;"></div>
-          <div class="col-md-6 wrap-about ftco-animate">
+          <div class="col-md-6 wrap-about">
             <div class="heading-section heading-section-white pl-md-5">
-              <span class="subheading">O nas</span>
+              <span>O nas</span>
               <h2 class="mb-4">Auto Komplex</h2>
               <p>Jesteśmy firmą stworzoną przez pasjonatów motoryzacji którzy wiedzą dokładnie czego kierowcy oczekują. Oferujemy kompleksowe usługi motoryzacyjne dla posiadaczy samochodów osobowych.</p>
               <p>Posiadamy duże doświadczenie w naprawach blacharsko-lakierniczych i mechanicznych.
@@ -98,12 +98,12 @@
     <footer class="footer-area">
       <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-lg-1">
             <div class="single-footer-widget">
               <img class="footer-logo" src="images/logo-white.png" alt="auto-komplex logo">
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-2 order-lg-4">
             <div class="single-footer-widget">
               <h6>NAWIGACJA</h6>
               <ul>
@@ -114,16 +114,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-4">
-            <div class="single-footer-widget">
-              <h6>KONTAKT</h6>
-              <ul>
-                <li><span><i class="fas fa-phone"></i></span><a href="tel:+48-503-519-572">+48 503 519 572</a></li>
-                <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-3">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-lg-12">
             <div class="single-footer-widget footer-address">
               <h6>Adres</h6>
               <p><span>AUTO KOMPLEX</span></p>
@@ -131,6 +122,15 @@
               <p>52-214 Wrocław</p>
               <p>woj. dolnośląskie</p>
               <p>Polska</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-12 col-lg-4 order-lg-8">
+            <div class="single-footer-widget">
+              <h6>KONTAKT</h6>
+              <ul>
+                <li><span><i class="fas fa-phone"></i></span><a href="tel:+48-503-519-572">+48 503 519 572</a></li>
+                <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
+              </ul>
             </div>
           </div>
         </div>
