--- a/src/contact.html
+++ b/src/contact.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="gallery.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Kontakt</a>
+              <a class="nav-link acive-nav-link" href="contact.html">Kontakt</a>
             </li>
           </ul>
         </div>
@@ -79,7 +79,7 @@
     <section class="contactArea">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-md-4">
+          <div class="col-lg-4">
             <div class="contactAddress">
               <h4>Dane kontaktowe</h4>
               <ul>
@@ -87,7 +87,10 @@
                   <div class="icon">
                     <i class="fa fa-phone"></i>
                   </div>
-                  <p><span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></span><span><a href="tel:+48-503-519-572">+48 503 519 572</a></span></p>
+                  <p>
+                    <span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></span>
+                    <span><a href="tel:+48-503-519-572">+48 503 519 572</a></span>
+                  </p>
                 </li>
                 <li>
                   <div class="icon">
@@ -104,7 +107,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-8 col-md-8">
+          <div class="col-lg-8">
             <div class="contactForm">
               <h4>Zostaw wiadomość</h4>
               <form method="post" name="contactform" action="mail.php">
@@ -133,12 +136,12 @@
     <footer class="footer-area">
       <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-lg-1">
             <div class="single-footer-widget">
               <img class="footer-logo" src="images/logo-white.png" alt="auto-komplex logo">
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-2 order-lg-4">
             <div class="single-footer-widget">
               <h6>NAWIGACJA</h6>
               <ul>
@@ -149,16 +152,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-4">
-            <div class="single-footer-widget">
-              <h6>KONTAKT</h6>
-              <ul>
-                <li><span><i class="fas fa-phone"></i></span><a href="tel:+48-503-519-572">+48 503 519 572</a></li>
-                <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-3">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-lg-12">
             <div class="single-footer-widget footer-address">
               <h6>Adres</h6>
               <p><span>AUTO KOMPLEX</span></p>
@@ -166,6 +160,15 @@
               <p>52-214 Wrocław</p>
               <p>woj. dolnośląskie</p>
               <p>Polska</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-12 col-lg-4 order-lg-8">
+            <div class="single-footer-widget">
+              <h6>KONTAKT</h6>
+              <ul>
+                <li><span><i class="fas fa-phone"></i></span><a href="tel:+48-503-519-572">+48 503 519 572</a></li>
+                <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
+              </ul>
             </div>
           </div>
         </div>
