--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,7 @@
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="auto komplex logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <span><i class="fas fa-bars fa-1x"></i></span>
         </button>
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav">
@@ -93,7 +91,7 @@
           <div class="col-lg-8 col-md-8">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="featureItem">
+                <div class="featureItem firstfeatureItem">
                   <img src="images/feature-1.png" alt="">
                   <h5>Likwidacja szkód komunikacyjnych</h5>
                 </div>
@@ -130,12 +128,12 @@
             <div class="card-body right-card-body">
               <div class="wrapper">
                 <h3 class="card-title">Kompleksowe naprawy <br> blacharsko-lakiernicze.</h3>
-                <p class="card-text">Warsztat Auto Komplex oferuje pełny zakres napraw blacharsko-lakierniczych. Podejmujemy się napraw lekkich jak obtarcia/wgnioty  oraz tych cięższych jak uszkodzenia konstrukcyjne pojazdu np. po dachowaniu.</p>
+                <p class="card-text">Warsztat Auto Komplex oferuje pełny zakres napraw blacharsko-lakierniczych. Podejmujemy się napraw lekkich jak obtarcia/wgnioty  oraz tych cięższych jak uszkodzenia konstrukcyjne pojazdu np. po dachowaniu lub korozji.</p>
               </div>
             </div>
           </div>
           <div class="card left-card col-12">
-            <img class="card-img-top left-card-img" src="images/mechanic.jpg">
+            <img class="card-img-top left-card-img last-card-img" src="images/mechanic.jpg">
             <div class="card-body">
               <div class="wrapper">
                 <h3 class="card-title">Mechanika pojazdowa.</h3>
@@ -149,12 +147,12 @@
     <footer class="footer-area">
       <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-lg-1">
             <div class="single-footer-widget">
               <img class="footer-logo" src="images/logo-white.png" alt="auto-komplex logo">
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-2 order-lg-4">
             <div class="single-footer-widget">
               <h6>NAWIGACJA</h6>
               <ul>
@@ -165,16 +163,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-4">
-            <div class="single-footer-widget">
-              <h6>KONTAKT</h6>
-              <ul>
-                <li><span><i class="fas fa-phone"></i></span><a href="tel:+48-503-519-572">+48 503 519 572</a></li>
-                <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-3">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-lg-12">
             <div class="single-footer-widget footer-address">
               <h6>Adres</h6>
               <p><span>AUTO KOMPLEX</span></p>
@@ -182,6 +171,15 @@
               <p>52-214 Wrocław</p>
               <p>woj. dolnośląskie</p>
               <p>Polska</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-12 col-lg-4 order-lg-8">
+            <div class="single-footer-widget">
+              <h6>KONTAKT</h6>
+              <ul>
+                <li><span><i class="fas fa-phone"></i></span><a href="tel:+48-503-519-572">+48 503 519 572</a></li>
+                <li><span><i class="far fa-envelope"></i></span><a href="mailto:autokomplexsos@gmail.com">autokomplexsos@gmail.com</a></li>
+              </ul>
             </div>
           </div>
         </div>
